# yats

./: .gitignore  .gitmodules  DEVELOPMENT.md  README.md  dev.py  dev_server.py  main.py  management.py  pyproject.toml  python3-todo.txt  requirements.txt
data/db/: yats_dev.sqlite
modules/dashboard/: README.md  __init__.py  admin.py  machine_default_run_times.tsv  models.py  sequencing_config.py  serializers.py  urls.py  utils.py  views.py
modules/dashboard/management/commands/: collect_dashboard_static.py  create_sample_gantt_data.py  create_ticket_gantt_data.py  sync_minknow_runs.py  watcher.py
modules/dashboard/migrations/: 0001_initial.py  0002_task_color.py  0003_task_external_id_task_readonly_task_source.py  0003_task_external_id_task_readonly_task_source_runfolder.py
modules/dashboard/static/dashboard/css/: dashboard.css
modules/dashboard/static/dashboard/js/: dashboard.js
modules/dashboard/templates/dashboard/: analytics.html  base.html  calendar.html  gantt.html  home.html  sequencing_analytics.html  sequencing_analytics_simple.html
modules/yats/: forms.py  tickets.py  views.py
modules/yats/management/commands/: create_sequencing_tickets.py
modules/yats/middleware/: auth.py
modules/yats/migrations/: 0028_alter_boards_id_alter_docs_id_alter_docs_files_id_and_more.py
modules/yats/templates/: base.html
modules/yats/templates/tickets/: list.html  querybuilder.html
sites/web/: manage.py
sites/web/web/: settings.py  settings_local.py  urls.py  urls_local.py  wsgi.py
vagrant/: Vagrantfile
